red-hat-gallery/grafana-instance/overlays/service-mesh/grafana-service-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grafana-service
spec:
  host: grafana-service
  trafficPolicy:
    tls:
      mode: DISABLE
