red-hat-gallery/grafana-instance/overlays/service-mesh/grafana-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
spec:
  # Allow traffic coming from the OpenShift ingress router to Grafana
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector:
    matchLabels:
      app: grafana
  policyTypes:
  - Ingress
